# climt

./: .gitignore  CITATION.cff  README.md  analyze.py  config.py  config.yml  convert.py  dump.txt  main.py  main.sh  output.csv  output.txt  produce.py  prova.md  prova.txt  pyproject.toml  report.md  report.txt  report_generator.py  requirements.txt  run.sh  text_analyzer.py
data/: test1.txt  test2.txt
modules/: analysis_module.py  composition_module.py  readability_module.py  sentiment_module.py  word_module.py
output/: report.txt  test1_report.txt  test2_report.txt
src/: analyzer.py  config.py  conversion_engine.py  convert.py  main.py  report_generator.py  text_analyzer.py
src/modules/: analysis.py  analysis_module.py  composition_module.py  pos.py  pos_module.py  readability.py  readability_module.py  sentiment.py  sentiment_module.py  text.py  text_module.py  word_module.py  word_stats_module.py  words.py
src/tests/: test_analyzer.py  test_conversion_engine.py  test_text_analyzer.py  test_text_module.py
src/utils/: load.py  report.py  visualization.py
tests/: test_analyzer.py  test_pos.py  test_pos_module.py  test_readability.py  test_readability_module.py  test_sentiment.py  test_sentiment_module.py  test_text.py  test_text_module.py  test_word_stats_module.py  test_words.py
