[project]
name = "lodot"
version = "0.1.0"
description = "LODOT is a modular data engineering CLI tool for easily producing text mining reports in machine-actionable formats."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "pip>=25.2",
    "pytest>=8.4.1",
    "spacy>=3.8.7",
    "textblob>=0.19.0",
    "textstat>=0.7.10",
]
